First version of upgrading to jdk 17